link to fb page

--- a/website/index.html
+++ b/website/index.html
@@ -13,7 +13,9 @@
 			<div id="container">
 			<div id="title">facil</div>
 			<div id="subtitle">Facilitate the Way</div>
+			<a href="https://www.facebook.com/facilitatetheway/" target="_blank">
 			<img id="messengercode" src="assets/img/messengercode.png">
+		</a>
 		</div>
 			<div id="container">
 
